# boinc-native-app

./: CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh  vcpkg.json
.github/workflows/: build.yml
